cluster/apps/frigate/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frigate
  namespace: frigate
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - frigate.${domain_name}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: ak-outpost-proxy-outpost
      backendRefs:
        - name: frigate-main
          port: 5000
