cluster/apps/frigate/app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frigate
  namespace: frigate
spec:
  hosts:
  - frigate.${domain_name}
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: frigate-main.frigate.svc.cluster.local
        port:
          number: 5000
    match:
    - authority:
        exact: frigate.${domain_name}
      uri:
        prefix: /
